cabal-version: 1.12

name:         bitbucket-builder
version:      0.1.0.0
synopsis:     Small program for stack-based builds of private Bitbucket repos
description:  A few functions and a small program. 
              .
              Really just a wrapper using Shelly around command-line tools like
              curl, tar, and git.
              .
              Why? Because bash is so painful, and Bitbucket pipelines
              likewise.
              .
              See the README on GitHub at
              <https://github.com/phlummox/bitbucket-hs-builder#readme>
category:     Web
homepage:     https://github.com/phlummox/bitbucket-hs-builder#readme
author:       phlummox
maintainer:   phlummox2@gmail.com
license:      PublicDomain
build-type:   Simple

extra-source-files:
    README.md
    ChangeLog.md
    UNLICENSE
    stack-lts-12.yaml

source-repository head
  type: git
  location: https://github.com/phlummox/bitbucket-hs-builder

library
  exposed-modules:
      Network.Bitbucket
      Network.Bitbucket.Types
  hs-source-dirs:
      src
  build-depends:
      base >=4.0 && <5
    , interpolatedstring-perl6
    , process
    , shelly
    , text
  default-language: Haskell2010

executable bitbucket-builder
  main-is: bitbucket-builder.hs
  hs-source-dirs:
      .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.0 && <5
    , bitbucket-builder
    , interpolatedstring-perl6
    , process
    , shelly
    , text
  default-language: Haskell2010
